Finalizar versao inicial do servidor

--- a/templates/cadastramento.html
+++ b/templates/cadastramento.html
@@ -32,15 +32,20 @@
 
                             <div id = "d_saldo">
                                 <label for= "saldo">saldo: </label>
-                                <input id = "saldo" type = "text" name = "fsaldo" value = "{{lCadastro[2]}}" placeholder="saldo do aluno">
+                                <input id = "saldo" type = "text" name = "fsaldo" value = "{{lCadastro[2]}}" placeholder="saldo da pessoa">
                             </div>  
 
-                            <div id = "d_senha">
-                                <label for= "senha">senha: </label>
-                                <input id = "senha" type = "text" name = "fsenha" value = "{{lCadastro[3]}}" placeholder="senha do aluno">
+                            <div id = "d_chatId">
+                                <label for= "chatID">chatID: </label>
+                                <input id = "chatID" type = "text" name = "fchatId" value = "{{lCadastro[3]}}" placeholder="chatID da pessoa">
                             </div>
 
-                            <!-- <div id = "d_photo">
+                            <div id = "d_rfid">
+                                <label for= "rfid">rfid: </label>
+                                <input id = "rfid" type = "text" name = "frfid" value = "{{lCadastro[4]}}" placeholder="rfid da pessoa">
+                            </div> 
+
+                           <!--  <div id = "d_photo">
                                 <label for = "foto"> Foto estudante: </label>
                                 <input id = "foto" type = "file" name = "fFoto" accept="image/*" >
                             </div> -->
