--- a/templates/edita.html
+++ b/templates/edita.html
@@ -36,8 +36,16 @@
 
                             <div id = "d_saldo">
                                 <label for= "saldo">saldo: </label>
-                                <input id = "saldo" type = "text" name = "fsaldo"  value = "{{lEdita[1]}}" placeholder="Nome do aluno">
+                                <input id = "saldo" type = "text" name = "fsaldo"  value = "{{lEdita[1]}}" placeholder="Saldo da pessoa">
                             </div>    
+                            <div id = "d_chatID">
+                                <label for= "chatID">chatID: </label>
+                                <input id = "chatID" type = "text" name = "fchatId"  value = "{{lEdita[2]}}" placeholder="Chat Id da pessoa">
+                            </div>  
+                            <div id = "d_rfid">
+                                <label for= "rfid">rfid: </label>
+                                <input id = "rfid" type = "text" name = "frfid"  value = "{{lEdita[3]}}" placeholder="Rfid da pessoa">
+                            </div>  
                             
                             <!-- <div id = "d_photo">
                                 <label for = "foto"> Foto estudante: </label>
